fix: top spacing

--- a/src/components/RewardsSection/RewardsSection.module.scss
+++ b/src/components/RewardsSection/RewardsSection.module.scss
@@ -39,12 +39,13 @@
 
 .emblaContainer {
   display: flex;
-  gap: 20px;
+  gap: var(--space-lg);
   user-select: none;
   -webkit-touch-callout: none;
   -khtml-user-select: none;
   -webkit-tap-highlight-color: transparent;
   will-change: transform;
+  margin: var(--space-xs) 0;
 }
 
 .emblaSlide {
